Set widget’s images to 100% wide to prevent layout issues

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -2516,6 +2516,8 @@ body.single-tour-operator {
 			width: 17rem;
 		}
 	}
+
+	.lsx-to-widget-thumb img { width: 100%; }
 }
 
 .lsx-to-widget-meta-data {
